--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <repositories>
+    <repository>
+      <id>io.branch</id>
+      <name>branch nexus</name>
+      <url>http://admin.branch.io:8081/nexus/content/repositories/releases/</url>
+    </repository>
+  </repositories>
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -16,12 +23,32 @@
   <url>https://parquet.apache.org</url>
   <description>Parquet is a columnar storage format that supports nested data. This provides the java implementation.</description>
 
+  <!--<scm>-->
+    <!--<connection>scm:git:git@github.com:apache/parquet-mr.git</connection>-->
+    <!--<url>scm:git:git@github.com:apache/parquet-mr.git</url>-->
+    <!--<developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/parquet-mr.git</developerConnection>-->
+    <!--<tag>apache-parquet-1.8.1</tag>-->
+  <!--</scm>-->
+
   <scm>
-    <connection>scm:git:git@github.com:apache/parquet-mr.git</connection>
-    <url>scm:git:git@github.com:apache/parquet-mr.git</url>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/parquet-mr.git</developerConnection>
-    <tag>apache-parquet-1.8.1</tag>
+    <connection>scm:git:git://github.com/BranchMetrics/parquet-mr.git</connection>
+    <developerConnection>scm:git:git@github.com:BranchMetrics/parquet-mr.git</developerConnection>
+    <url>https://github.com/BranchMetrics/parquet-mr</url>
+    <tag>HEAD</tag>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Nexus Release Repository</name>
+      <url>http://admin.branch.io:8081/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>Nexus Snapshot Repository</name>
+      <url>http://admin.branch.io:8081/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <licenses>
     <license>
@@ -81,7 +108,7 @@
     <cascading.version>2.5.3</cascading.version>
     <parquet.format.version>2.3.0-incubating</parquet.format.version>
     <log4j.version>1.2.17</log4j.version>
-    <previous.version>1.7.0</previous.version>
+    <!--<previous.version>1.7.0</previous.version>-->
     <thrift.executable>thrift</thrift.executable>
     <scala.version>2.10.4</scala.version>
     <!-- scala.binary.version is used for projects that fetch dependencies that are in scala -->
@@ -96,6 +123,7 @@
 
   <modules>
     <module>parquet-avro</module>
+    <module>parquet-avrov2</module>
     <module>parquet-benchmarks</module>
     <module>parquet-cascading</module>
     <module>parquet-column</module>
@@ -103,10 +131,12 @@
     <module>parquet-encoding</module>
     <module>parquet-generator</module>
     <module>parquet-hadoop</module>
+    <module>parquet-hadoopv2</module>
     <module>parquet-jackson</module>
     <module>parquet-pig</module>
     <module>parquet-pig-bundle</module>
     <module>parquet-protobuf</module>
+    <module>parquet-protobufv2</module>
     <module>parquet-scala</module>
     <module>parquet-scrooge</module>
     <module>parquet-thrift</module>
